Closed Bug 632802 Opened 13 years ago Closed 13 years ago

warnings are lying in PresShell::Observe

Categories

(Core :: Layout, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: vingtetun, Assigned: vingtetun)

Details

Attachments

(1 file)

If you have ACCESSIBILITY enabled and you receive some topics "a11y-init-or-shutdown" messages it actually says the topic is unknow.
Mark, this is the warning I was seeing in the console and that I mentionned last time. Finally this is just a false alarm.
Comment on attachment 511026 [details] [diff] [review]
Patch - one liner

r=dbaron (and a2.0=dbaron)
Attachment #511026 - Flags: review?(roc)
Attachment #511026 - Flags: review+
Attachment #511026 - Flags: approval2.0+
Assignee: nobody → 21
http://hg.mozilla.org/mozilla-central/rev/0a3f2dd6870f

Thanks.
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Keywords: checkin-needed
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: