Fix spurious NS_WARNING by adding missing return.  (Bug 632802)  r=dbaron  a2.0=dbaron